WebVR: process animations from posted task to yield for other events

If we call GetVSync inline from OnVSync, we can end up with the next
VSync already being ready and scheduled when we exit, and then we'll process
several frames in a row without ever yielding back to the main event loop,
causing input processing delay.

BUG=701444

Review-Url: https://codereview.chromium.org/2748293002
Cr-Commit-Position: refs/heads/master@{#457189}

Former-commit-id: ff386cfefd3fe0f9cef72ff28f7c7f09d972608d