third_party/WebKit/Source/modules/vr/VRDisplay.h
@@ -146,6 +146,7 @@ class VRDisplay final : public EventTargetWithInlineData,
   void OnVSyncConnectionError();
 
   ScriptedAnimationController& ensureScriptedAnimationController(Document*);
+  void processScheduledAnimations(double timestamp);
 
   Member<NavigatorVR> m_navigatorVR;
   unsigned m_displayId = 0;
